fix overflow issue on edge

--- a/styles/modules/dialog.css
+++ b/styles/modules/dialog.css
@@ -162,12 +162,15 @@
 }
 
 .dialog-list {
-	overflow: scroll;
 	margin-left: -20px;
 	padding-left: 20px;
 	padding-right: 20px;
 	width: calc(100% + 40px);
 	max-height: calc(100vh - 355px);
+	/* overflow: scroll; */
+	overflow: auto;
+	overflow-x: none;
+	overflow-y: auto;
 }
 
 .has-touch .dialog-list {
